--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
-@media (orientation: portrait) {
-    #name-container {
-        width: 100%;
+@media handheld and (orientation: portrait) {
+    html {
+        font-size: 300%;
+    }
+
+    #profile-picture {
+        width: 40vw !important;
     }
 }
 
 #profile-picture {
-    width: 12%;
+    width: 8vw;
     border-radius: 50%;
+    margin: 5%;
 }
 
 #name-container {
@@ -15,6 +20,7 @@
 }
 
 #name {
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -59,7 +65,6 @@ body {
     background-color: #202020;
     display: grid;
     place-items: center;
-    margin: 1%
 }
 
 a {
